--- a/news-homepage-main/style.css
+++ b/news-homepage-main/style.css
@@ -15,8 +15,8 @@ main{
     margin-bottom: 2rem;
     position: relative;
     margin-left: 0;
-    width: auto;
-    height: auto;
+    width: 100%;
+    height: 100%;
 }
 /*   Header   */
 header{
@@ -247,12 +247,12 @@ a{
 .toggle-nav{
     position: fixed;   
     height: 100%;
-    width: auto;
+    width: 100%;
     top:0;
 }
 
 .navDiv{
-    width: ;
+    width: 65%;
     height: 100%;
     background: white;
     opacity: 100%;
@@ -260,7 +260,7 @@ a{
 }
 
 .blurDiv{
-    width:  5rem;
+    width:  35%;
     height: 100%;
     background: black;
     opacity: 0.5;
@@ -279,9 +279,10 @@ a{
 
 .toggleMenu{
     margin:0;
-    position: absolute;
-    left: 3.5rem;
-    top: 6rem;
+    position: block;
+    float: left;
+    margin-left: -3rem;
+    margin-top: 5rem;
     line-height: 2.5rem;
 }
 
